[project]
name = "ymca"
version = "0.1.0"
description = "YNAB FX transaction conversion CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyYAML>=6.0.2",
    "ynab>=4.0.0",
]

[project.scripts]
ymca = "ymca:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.1",
    "types-PyYAML>=6.0.12.20250915",
]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["ynab", "ynab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits the real YNAB API and requires YNAB_API_KEY",
]
addopts = [
    "--cov=src/ymca",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["src/ymca"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
